<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="zero" translatable="false">1</string>
    <string name="price" translatable="false">0,00 zł</string>
    <string name="przycisk">Order</string>
    <string name="cena">ORDER SUMMARY</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="toppings">Toppings</string>
    <string name="cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="imie">Name </string>

    <!-- JAVA strings -->
    <string name="mail_title">New order for </string>
    <string name="max_toast">Maximum order is 10 cups of coffees</string>
    <string name="min_toast">Minimum order is 1 cup of coffee</string>
    <string name="whipped_cream">Add Whipped Cream? </string>
    <string name="add_chocolate">Add Chocolate? </string>
    <string name="qtity">Quantity: </string>
    <string name="total">Total: $</string>
    <string name="thanks">Thank you!</string>
</resources>
